BUG FIX: Fixed a problem that caused an error on profile.js. Also improved readability for the history page message telling the users they have no history of activities

--- a/public/css/history.css
+++ b/public/css/history.css
@@ -30,6 +30,11 @@ body {
     text-align: center;
     padding-right: 20px;
 }
+
+#topGreeting {
+    font-weight: 700;
+}
+
 main>p{
     padding:7px 20px;
     margin:10px;
@@ -162,6 +167,10 @@ form>#submit:active {
 
 .submit_comment:active {
     background-color: #8b622a;
+}
+
+#serverMsg {
+    font-weight: 700;
 }
 
 @media screen and (max-width:599px) {
